<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/textInstr1"
                style="@style/textBraun21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTitleInstr" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp" app:srcCompat="@drawable/ic_instruction_a"
                android:id="@+id/imageInstr"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textTitleInstr" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"/>
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button" android:id="@+id/scrollView3"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageInstr">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView
                        android:text="@string/textInstr2"
                        style="@style/textBraun14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textInstrDescrib"/>
            </LinearLayout>
        </ScrollView>
        <Button
                android:text="@string/btn2"
                android:background="@drawable/btn_instr"
                style="@style/textBraun21"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                    android:id="@+id/guideline"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.7"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
