<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/dontColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:cardCornerRadius="4dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/guesWord2"
                        android:textSize="24sp"
                        android:textColor="@color/btnInstr1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewNamePLayer" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="7dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView15" android:fontFamily="@font/roboto_medium"/>
                <ImageView
                        android:layout_width="0dp"
                        android:scaleType="centerCrop"
                        android:layout_height="40dp" app:srcCompat="@drawable/ic_rectangle_frame_gues_word"
                        android:id="@+id/imageView16" android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNamePLayer" android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/guesWord3"
                        android:textColorHint="@color/btnHist1"
                        android:textSize="16sp"
                        android:textColor="@color/btnInstr1"
                        android:ems="10"
                        android:id="@+id/editTextEnterWord" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                        app:layout_constraintTop_toTopOf="@+id/imageView16"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView16"/>
                <TextView
                        android:text="@string/guesWord1"
                        android:textSize="14sp"
                        android:textColor="@color/btnHist1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView15" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/roboto"/>
                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBarGuesWord" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
